contrast fix attempt

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,19 @@ img{
 }
 
 main {
-    background-color: rgb(255, 217, 0);
+    background-color: rgb(255, 232, 104);
     margin: -5;
     padding: -5;
+}
+
+a {
+    color: rgb(0, 0, 58)
+}
+
+a:visited {
+    color: rgb(138, 2, 2)
+}
+
+a:hover {
+    color: green
 }
